--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Apprehensive Candid Pelican</title>
-    <meta property="og:title" content="Apprehensive Candid Pelican" />
+    <title>4314 Assignment</title>
+    <meta property="og:title" content="4314 Assignment" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -41,8 +41,8 @@
 
       <div class="home-container">
         <header data-role="Header" class="home-header">
-          <div class="home-container1"><div class="home-nav"></div></div>
-          <h1>EECS4314 Assignment</h1>
+          <div class="home-container01"><div class="home-nav"></div></div>
+          <h1>Group Small</h1>
           <div class="home-btn-group"></div>
           <nav class="navigation-links-nav navigation-links-root-class-name10">
             <a href="index.html" class="navigation-links-navlink">
@@ -67,7 +67,7 @@
           </div>
           <div data-role="MobileMenu" class="home-mobile-menu">
             <div class="home-nav1">
-              <div class="home-container2">
+              <div class="home-container02">
                 <img
                   alt="image"
                   src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
@@ -192,10 +192,46 @@
             </li>
           </ul>
         </div>
+        <div class="home-features">
+          <h1 class="home-text28">
+            <span>GROUP MEMEBERS</span>
+            <br />
+          </h1>
+          <div class="home-container03">
+            <div class="home-container04">
+              <div class="home-container05">
+                <div class="home-container06">
+                  <div class="home-container07">
+                    <h1 class="home-text31">Muhammad Omar</h1>
+                  </div>
+                  <div class="home-container08">
+                    <h1 class="home-text32">
+                      <span>Zakaria</span>
+                      <br />
+                      <span>Ferr</span>
+                    </h1>
+                  </div>
+                </div>
+                <div class="home-container09">
+                  <h1 class="home-text36">Bartolomeo Gisone</h1>
+                </div>
+              </div>
+              <div class="home-container10">
+                <h1 class="home-text37">Corneille Bobda</h1>
+              </div>
+            </div>
+            <div class="home-container11">
+              <h1 class="home-text38">
+                <span>Nishiket Singh</span>
+                <br />
+              </h1>
+            </div>
+          </div>
+        </div>
         <div class="home-banner2">
-          <h2 class="home-text28">
-            <span class="home-text29">APACHE FLINK SOURCE CODE</span>
-            <br class="home-text30" />
+          <h2 class="home-text41">
+            <span class="home-text42">APACHE FLINK SOURCE CODE</span>
+            <br class="home-text43" />
             <span></span>
           </h2>
           <a
