--- a/resources.html
+++ b/resources.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Resources - Apprehensive Candid Pelican</title>
-    <meta
-      property="og:title"
-      content="Resources - Apprehensive Candid Pelican"
-    />
+    <title>Resources - 4314 Assignment</title>
+    <meta property="og:title" content="Resources - 4314 Assignment" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
