Fixed format error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="home-container">
         <header data-role="Header" class="home-header">
-          <div class="home-container01"><div class="home-nav"></div></div>
+          <div class="home-container1"><div class="home-nav"></div></div>
           <h1>Group Small</h1>
           <div class="home-btn-group"></div>
           <nav class="navigation-links-nav navigation-links-root-class-name10">
@@ -67,7 +67,7 @@
           </div>
           <div data-role="MobileMenu" class="home-mobile-menu">
             <div class="home-nav1">
-              <div class="home-container02">
+              <div class="home-container2">
                 <img
                   alt="image"
                   src="https://presentation-website-assets.teleporthq.io/logos/logo.png"
@@ -161,7 +161,7 @@
                 and other low latency data processing apps.
               </span>
             </li>
-            <li class="home-li1 list-item">
+            <li class="home-li01 list-item">
               <span class="home-text21">
                 <span>
                   Batch Processing: Processing large datasets in a distributed
@@ -172,19 +172,19 @@
                 <br />
               </span>
             </li>
-            <li class="home-li2 list-item">
+            <li class="home-li02 list-item">
               <span class="home-text25">
                 Event Time Processing: Flink supports event time processing,
                 which is crucial for handling out of order data.
               </span>
             </li>
-            <li class="home-li3 list-item">
+            <li class="home-li03 list-item">
               <span class="home-text26">
                 Fault Tolerance: Flink can recover from failures and continue
                 processing without losing data or corrupting results.
               </span>
             </li>
-            <li class="home-li4 list-item">
+            <li class="home-li04 list-item">
               <span>
                 Stateful Processing: allows applications to maintain and update
                 state as data is processed.
@@ -197,41 +197,18 @@
             <span>GROUP MEMEBERS</span>
             <br />
           </h1>
-          <div class="home-container03">
-            <div class="home-container04">
-              <div class="home-container05">
-                <div class="home-container06">
-                  <div class="home-container07">
-                    <h1 class="home-text31">Muhammad Omar</h1>
-                  </div>
-                  <div class="home-container08">
-                    <h1 class="home-text32">
-                      <span>Zakaria</span>
-                      <br />
-                      <span>Ferr</span>
-                    </h1>
-                  </div>
-                </div>
-                <div class="home-container09">
-                  <h1 class="home-text36">Bartolomeo Gisone</h1>
-                </div>
-              </div>
-              <div class="home-container10">
-                <h1 class="home-text37">Corneille Bobda</h1>
-              </div>
-            </div>
-            <div class="home-container11">
-              <h1 class="home-text38">
-                <span>Nishiket Singh</span>
-                <br />
-              </h1>
-            </div>
-          </div>
+          <ul class="list">
+            <li class="home-li05 list-item"><span>Muhammad Omar</span></li>
+            <li class="home-li06 list-item"><span>Zakaria Ferr</span></li>
+            <li class="home-li07 list-item"><span>Bartolomeo Gisone</span></li>
+            <li class="home-li08 list-item"><span>Corneille Bobda</span></li>
+            <li class="home-li09 list-item"><span>Nishiket Singh</span></li>
+          </ul>
         </div>
         <div class="home-banner2">
-          <h2 class="home-text41">
-            <span class="home-text42">APACHE FLINK SOURCE CODE</span>
-            <br class="home-text43" />
+          <h2 class="home-text36">
+            <span class="home-text37">APACHE FLINK SOURCE CODE</span>
+            <br class="home-text38" />
             <span></span>
           </h2>
           <a
