--- a/deliverables.html
+++ b/deliverables.html
@@ -144,9 +144,11 @@
           <button type="button" class="deliverables-button button">
             Download
           </button>
-                        <div class="deliverables-container7">
-                        <h1 class="deliverables-text6">Conceptual Architecture</h1>
-                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentation</a>
+                        <div class="deliverables-container7">                       
+                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Conceptual Architecture Presentation</a>
+                      </div>
+                      <div class="deliverables-container8">                        
+                        <a href="https://m-omar624.github.io/4314-Assignment" target="_blank">Conceptual Architecture Report</a>
                       </div>
         </div>
         <div class="deliverables-container4">
