--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
             <li class="home-li07 list-item"><span>Bartolomeo Gisone</span></li>
             <li class="home-li08 list-item"><span>Corneille Bobda</span></li>
             <li class="home-li09 list-item"><span>Nishiket Singh</span></li>
+            <li class="home-li08 list-item"><span>Ratul Momen</span></li>
+            <li class="home-li09 list-item"><span>Ruth Bezabeh</span></li>
           </ul>
         </div>
         <div class="home-banner2">
