--- a/deliverables.html
+++ b/deliverables.html
@@ -150,7 +150,7 @@
                          <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentation</a>
                       </div>
                       <div>
-                        <a href="https://m-omar624.github.io/4314-Assignment" target="_blank">Report</a>
+                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitectureReport.pdf" target="_blank">Report</a>
                       </div>
                       </div>
         </div>
