--- a/deliverables.html
+++ b/deliverables.html
@@ -147,10 +147,10 @@
                       <div>  
                          <h2>Conceptual Architecture</h2>
                         <div>
-                         <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentation</a>
+                         <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentationlink</a>
                       </div>
                       <div>
-                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitectureReport.pdf" target="_blank">Report</a>
+                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitectureReport.pdf" target="_blank">Reportlink</a>
                       </div>
                       </div>
         </div>
