--- a/deliverables.html
+++ b/deliverables.html
@@ -140,17 +140,16 @@
             src="https://play.teleporthq.io/static/svg/default-img.svg"
             class="deliverables-image1"
           />
-          <h1 class="deliverables-text2">Assignment 1</h1>
+          <h1 class="deliverables-text2">Conceptual Architecture</h1>
           <button type="button" class="deliverables-button button">
             Download
           </button>
                       <div>  
-                         <h2>Conceptual Architecture</h2>
-                        <div>
-                         <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentationlink</a>
+                         <div>
+                         <h2><a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitecturePresentation.pdf" target="_blank">Presentationlink</a></h2>
                       </div>
                       <div>
-                        <a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitectureReport.pdf" target="_blank">Reportlink</a>
+                        <h2><a href="https://m-omar624.github.io/4314-Assignment/ConceptualArchitectureReport.pdf" target="_blank">Reportlink</a></h2>
                       </div>
                       </div>
         </div>
