--- a/deliverables.html
+++ b/deliverables.html
@@ -159,10 +159,15 @@
             src="https://play.teleporthq.io/static/svg/default-img.svg"
             class="deliverables-image2"
           />
-          <h1 class="deliverables-text3">Assignment 2</h1>
+          <h1 class="deliverables-text3">Concrete Architecture</h1>
           <button type="button" class="deliverables-button1 button">
             Download
           </button>
+          <div>  
+                         <div>
+                         <h2><a href="https://m-omar624.github.io/4314-Assignment/4314 A2.pdf" target="_blank">Presentationlink</a></h2>
+                      </div>
+                      </div>
         </div>
         <div class="deliverables-container5">
           <img
