--- a/deliverables.html
+++ b/deliverables.html
@@ -168,7 +168,7 @@
                            <h2><a href="https://m-omar624.github.io/4314-Assignment/4314 A2.pdf" target="_blank">Presentationlink</a></h2>
                           </div>
                           <div>
-                           <h2><a href="https://m-omar624.github.io/4314-Assignment/ConcereteArchitectureReport.pdf" target="_blank">Presentationlink</a></h2>
+                           <h2><a href="https://m-omar624.github.io/4314-Assignment/ConcreteArchitectureReport.pdf" target="_blank">Reportlink</a></h2>
                           </div>
                       </div>
         </div>
