--- a/deliverables.html
+++ b/deliverables.html
@@ -182,6 +182,11 @@
           <button type="button" class="deliverables-button2 button">
             Download
           </button>
+                        <div>
+                           <div>
+                           <h2><a href="https://m-omar624.github.io/4314-Assignment/DiscrepancyAnalysis.pdf" target="_blank">PresentationLink</a></h2>
+                          </div>
+                      </div>
         </div>
         <div class="deliverables-container6">
           <img
