--- a/deliverables.html
+++ b/deliverables.html
@@ -178,13 +178,16 @@
             src="https://play.teleporthq.io/static/svg/default-img.svg"
             class="deliverables-image3"
           />
-          <h1 class="deliverables-text4">Assignment 3</h1>
+          <h1 class="deliverables-text4">Discrepancy Analysis</h1>
           <button type="button" class="deliverables-button2 button">
             Download
           </button>
                         <div>
                            <div>
                            <h2><a href="https://m-omar624.github.io/4314-Assignment/DiscrepancyAnalysis.pdf" target="_blank">PresentationLink</a></h2>
+                          </div>
+                          <div>
+                           <h2><a href="https://m-omar624.github.io/4314-Assignment/DiscrepancyAnalysisReport.pdf" target="_blank">ReportLink</a></h2>
                           </div>
                       </div>
         </div>
